--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 html {
     background-color: black;
     color: white;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url("./img/ocean-night.png");
+    background-size: 200px auto;
+}
+
+.loginTitle {
+    background-image: url('./img/ocean-header-night.png');
+    background-position: center bottom;
+    background-size: 400px auto;
+    background-repeat: repeat-x;
+    text-align: left;
+    color: white;
+    padding: 30px;
+    top: -20px;
+    left: -8px;
+    position: relative;
+    width: calc(100% - 45px);
 }
 
 .header {
